<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_node_list"
            android:icon="@drawable/ic_menu_view_list"
            android:title="@string/menu_node_list" />
    </group>

    <item android:title="@string/menu_detailed_info">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_overview"
                    android:icon="@drawable/ic_menu_insert_chart"
                    android:title="@string/menu_overview" />
                <item
                    android:id="@+id/nav_network"
                    android:icon="@drawable/ic_menu_network_check"
                    android:title="@string/menu_network" />
                <item
                    android:id="@+id/nav_disk"
                    android:icon="@drawable/ic_menu_all_inbox"
                    android:title="@string/menu_disk" />
                <item
                    android:id="@+id/nav_process"
                    android:icon="@drawable/ic_menu_widgets"
                    android:title="@string/menu_process" />
                <item
                    android:id="@+id/nav_app_apache"
                    android:icon="@drawable/ic_menu_http"
                    android:title="@string/menu_app_apache" />
                <item
                    android:id="@+id/nav_app_nginx"
                    android:icon="@drawable/ic_menu_http"
                    android:title="@string/menu_app_nginx" />
                <item
                    android:id="@+id/nav_app_mysql"
                    android:icon="@drawable/ic_menu_store"
                    android:title="@string/menu_app_mysql" />
                <item
                    android:id="@+id/nav_app_pgsql"
                    android:icon="@drawable/ic_menu_store"
                    android:title="@string/menu_app_pgsql" />
                <item
                    android:id="@+id/nav_system"
                    android:icon="@drawable/ic_menu_extension"
                    android:title="@string/menu_system" />
            </group>
        </menu>
    </item>

</menu>
